--- a/_includes/f.htm
+++ b/_includes/f.htm
@@ -6,7 +6,7 @@
 	</span>
 	{%- if include.f %}
 	<span class="float-right">
-		<a href="#top" class="lighter">top</a>
+		<a href="#top" class="text-gray">top</a>
 	</span>
 	{% endif -%}
 </small></p>
