--- a/_includes/a.htm
+++ b/_includes/a.htm
@@ -1,4 +1,4 @@
-<a href="{{ include.url }}" target="_blank">
+<a href="{{ include.url }}" target="_blank" rel="nofollow">
 {%- if include.text -%}
   {{ include.text }}
 {%- else -%}
