--- a/_includes/footer.htm
+++ b/_includes/footer.htm
@@ -1,7 +1,7 @@
 <hr style="margin: 24px 0 5px;" />
 <p><small>
 	<span class="float-left">
-		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}README.md" target="_blank" class="lighter">page</a>
+		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}README.md" target="_blank" class="lighter">edit</a>
 		&nbsp; | &nbsp;
 		<a href="https://github.com/olexsyn{{ site.baseurl }}/tree/master{{ page.url }}" target="_blank" class="lighter">code</a>
 	</span>
