--- a/css/github.css
+++ b/css/github.css
@@ -4690,7 +4690,7 @@ pre {
 }
 .markdown-body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	font-size: 16px; /* 14px */
+	font-size: 18px; /* 14px */
 	line-height: 1.5;
 	word-wrap: break-word
 }
@@ -5001,7 +5001,7 @@ pre {
 .markdown-body .highlight pre, .markdown-body pre {
 	padding: 6px 14px;  /* 16px */
 	overflow: auto;
-	font-size: 100%;  /* 85% */
+	font-size: 85%;
 	line-height: 1.45;
 	background-color: #f6f8fa;
 	border-radius: 6px;  /* 3px; */
