--- a/_includes/cl.htm
+++ b/_includes/cl.htm
@@ -1,6 +1,10 @@
 <pre class="command-line">
 {%- if include.cmd -%}
-	<p class="command">{{ include.cmd }}</p>
+	<p>
+	{%- if include.pref -%}
+		<span class="prefix">{{ include.pref }} </span>
+	{%- endif -%}
+	<span class="command">{{ include.cmd }}</span></p>
 {%- endif -%}
 {%- if include.small -%}
 	<span class="output">{{ include.small }}</span>
@@ -9,3 +13,4 @@
 	{{ include.out }}
 {%- endif -%}
 </pre>
+
