--- a/css/github.css
+++ b/css/github.css
@@ -5269,6 +5269,11 @@ a[href ^= "mailto"] {
 	color: #fff;
 	margin-bottom: 0px !important
 }
+.prefix {
+	color: #eee;
+	font-weight: 700;
+	margin-bottom: 0px !important
+}
 .output {
 	color: #d9d9d9;
 	font-size: 75%;
